Due to further performance improvements, continuous improvement, and increased efficiency

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Performance Optimization -->
-  <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
-  <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
-  <meta http-equiv="x-dns-prefetch-control" content="on" />
-
   <!-- Primary Meta Tags -->
   <title>سياحة الخليج | اكتشف سحر الخليج العربي</title>
   <meta name="title" content="سياحة الخليج | اكتشف سحر الخليج العربي" />
@@ -33,13 +28,11 @@
   <meta property="twitter:description"
     content="اكتشف سحر الخليج العربي - رحلات سياحية مميزة في دبي، الدوحة، الرياض ومسقط" />
 
-  <!-- Fonts - Optimized for Performance -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" media="print" onload="this.media='all'" />
+    rel="stylesheet" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
